--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
             <div class="footer__body">
                 <span class="footer__low footer__text">© Вместе с вами с 1992 года. Все права защищены</span>
                 <img src="./img/logo_black.svg" alt="logo" />
-                <span class="footer__made footer__text">Made by CF. Digital</span>
+                <span class="footer__made footer__text">Made by Popov Maksim</span>
             </div>
         </footer>
 
